// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/DatePicker/DatePicker Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rf:"
           class="_label_348na_5"
           for="datepickerInputId-:re:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:re:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rg:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rg:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rd:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label id="labelId-:r6:"
           class="_label_348na_5"
           for="htmlid"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="htmlid"
             class="_input_1g8wy_11"
             data-testid="123ID"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r7:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r7:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r4:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithAutoCompleteNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1u:"
           class="_label_348na_5"
           for="datepickerInputId-:r1t:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r1t:"
             class="_input_1g8wy_11"
             autocomplete="given-name"
             placeholder="placeholdertekst"
             value
             name="test_name"
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1v:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1v:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1s:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:ra:"
           class="_label_348na_5    dummyClassname"
           for="datepickerInputId-:r9:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7 dummyClassnameFormContainer">
      <input id="datepickerInputId-:r9:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             aria-describedby="datepickerErrorId-:r8:"
             aria-invalid="true"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rb:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rb:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r8:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15 dummyClassname">
        <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Fødselsdato er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithDateFormat play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r29:"
           class="_label_348na_5"
           for="datepickerInputId-:r28:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r28:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value="2024/02/05"
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2a:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2a:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r27:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1g:"
           class="_label_348na_5"
           for="datepickerInputId-:r1f:"
    >
      Fødselsdato
    </label>
    <div class="_description_5szkl_17">
      En liten beskrivelse tekst
    </div>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r1f:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1h:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1h:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1e:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rn:"
           class="_label_348na_5"
           for="datepickerInputId-:rm:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:rm:"
             class="_input_1g8wy_11"
             autocomplete="off"
             disabled
             placeholder="Skriv eller velg"
             value="01.02.2024"
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              disabled
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:ro:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:ro:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rl:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1b:"
           class="_label_348na_5"
           for="datepickerInputId-:r1a:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r1a:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             aria-describedby="datepickerErrorId-:r19:"
             aria-invalid="true"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1c:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1c:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15">
        <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Fødselsdato er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1k:"
           class="_label_348na_5"
           for="datepickerInputId-:r1j:"
    >
      Fødselsdato
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r1k:"
            aria-expanded="true"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r1l:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r1l:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_helpBox_5szkl_32">
      <div class="_helpBoxText_5szkl_45">
        Hjelpetekst
      </div>
      <button class="_button_19ayz_1 _button_small_19ayz_38  _helpBoxCloseButton_5szkl_52"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1n:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1n:">
            Lukk
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r1j:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1m:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1m:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1i:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r6f:"
           class="_label_348na_5"
           for="datepickerInputId-:r6e:"
    >
      Fødselsdato
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r6f:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r6g:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r6g:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r6e:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r6h:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r6h:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r6d:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1q:"
           class="_label_348na_5  _srOnly_348na_18"
           for="datepickerInputId-:r1p:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1">
      <input id="datepickerInputId-:r1p:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1r:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1r:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1o:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithInitialPickerDate play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2n:"
           class="_label_348na_5"
           for="datepickerInputId-:r2m:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r2m:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="true"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2o:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2o:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r2l:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div class="_calendarContainer_1g8wy_128">
      <div class="_calendar_feosd_5">
        <div class="_calendarNavigation_feosd_18">
          <button class="_button_19ayz_1 _button_medium_19ayz_42  _calendarNavigationArrowIcon_feosd_33"
                  data-brightness="default"
                  type="button"
          >
            <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r2p:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r2p:">
                Forrige måned Desember 2023
              </title>
              <path d="M9.86 4.5L3 12.5L9.86 20.5L11.8 18.83L7.45 13.75H21V11.25L7.45 11.25L11.8 6.17L9.86 4.5Z">
              </path>
            </svg>
          </button>
          <div class="_calendarNavigationMonthAndYearContainer_feosd_26">
            <div class>
              <label id="labelId-:r2s:"
                     class="_label_348na_5  _srOnly_348na_18"
                     for="selectId-:r2r:"
              >
                Velg måned
              </label>
              <div class="_selectContainer_1q368_1  _calendarNavigationMonth_feosd_26">
                <select id="selectId-:r2r:"
                        class="_select_1q368_1"
                >
                  <option class="_option_idcf7_1"
                          value="0"
                  >
                    Januar
                  </option>
                  <option class="_option_idcf7_1"
                          value="1"
                  >
                    Februar
                  </option>
                  <option class="_option_idcf7_1"
                          value="2"
                  >
                    Mars
                  </option>
                  <option class="_option_idcf7_1"
                          value="3"
                  >
                    April
                  </option>
                  <option class="_option_idcf7_1"
                          value="4"
                  >
                    Mai
                  </option>
                  <option class="_option_idcf7_1"
                          value="5"
                  >
                    Juni
                  </option>
                  <option class="_option_idcf7_1"
                          value="6"
                  >
                    Juli
                  </option>
                  <option class="_option_idcf7_1"
                          value="7"
                  >
                    August
                  </option>
                  <option class="_option_idcf7_1"
                          value="8"
                  >
                    September
                  </option>
                  <option class="_option_idcf7_1"
                          value="9"
                  >
                    Oktober
                  </option>
                  <option class="_option_idcf7_1"
                          value="10"
                  >
                    November
                  </option>
                  <option class="_option_idcf7_1"
                          value="11"
                  >
                    Desember
                  </option>
                </select>
                <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _selectIcon_1q368_55"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-hidden="true"
                     role="img"
                >
                  <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
                  </path>
                </svg>
              </div>
              <div id="selectErrorId-:r2q:"
                   aria-live="assertive"
                   aria-atomic="true"
              >
              </div>
            </div>
            <div class="_calendarNavigationYear_feosd_40">
              <label id="labelId-:r31:"
                     class="_label_348na_5  _srOnly_348na_18"
                     for="textFieldTextboxId-:r2v:"
              >
                Årstall
              </label>
              <input id="textFieldTextboxId-:r2v:"
                     class="_textbox_1kevi_5 $"
                     data-variant="medium"
                     autocomplete="off"
                     inputmode="numeric"
                     value="2024"
              >
              <div id="textFieldErrorId-:r2u:"
                   aria-live="assertive"
                   aria-atomic="true"
              >
              </div>
            </div>
          </div>
          <button class="_button_19ayz_1 _button_medium_19ayz_42  _calendarNavigationArrowIcon_feosd_33"
                  data-brightness="default"
                  type="button"
          >
            <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r32:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r32:">
                Neste måned Februar 2024
              </title>
              <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
              </path>
            </svg>
          </button>
        </div>
        <table class="_calendarTable_feosd_68">
          <caption class="_srOnly_feosd_157">
            Januar 2024
          </caption>
          <thead>
            <tr>
              <th class="_calendarTableHeaderCell_feosd_73">
                Ma.
              </th>
              <th class="_calendarTableHeaderCell_feosd_73">
                Ti.
              </th>
              <th class="_calendarTableHeaderCell_feosd_73">
                On.
              </th>
              <th class="_calendarTableHeaderCell_feosd_73">
                To.
              </th>
              <th class="_calendarTableHeaderCell_feosd_73">
                Fre
              </th>
              <th class="_calendarTableHeaderCell_feosd_73">
                Lør
              </th>
              <th class="_calendarTableHeaderCell_feosd_73">
                Sø.
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <button id="btn-2024-0-1"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 1. Januar 2024"
                >
                  1
                </button>
              </td>
              <td>
                <button id="btn-2024-0-2"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 2. Januar 2024"
                >
                  2
                </button>
              </td>
              <td>
                <button id="btn-2024-0-3"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 3. Januar 2024"
                >
                  3
                </button>
              </td>
              <td>
                <button id="btn-2024-0-4"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 4. Januar 2024"
                >
                  4
                </button>
              </td>
              <td>
                <button id="btn-2024-0-5"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 5. Januar 2024"
                >
                  5
                </button>
              </td>
              <td>
                <button id="btn-2024-0-6"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 6. Januar 2024"
                >
                  6
                </button>
              </td>
              <td>
                <button id="btn-2024-0-7"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 7. Januar 2024"
                >
                  7
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button id="btn-2024-0-8"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 8. Januar 2024"
                >
                  8
                </button>
              </td>
              <td>
                <button id="btn-2024-0-9"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 9. Januar 2024"
                >
                  9
                </button>
              </td>
              <td>
                <button id="btn-2024-0-10"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 10. Januar 2024"
                >
                  10
                </button>
              </td>
              <td>
                <button id="btn-2024-0-11"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 11. Januar 2024"
                >
                  11
                </button>
              </td>
              <td>
                <button id="btn-2024-0-12"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 12. Januar 2024"
                >
                  12
                </button>
              </td>
              <td>
                <button id="btn-2024-0-13"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 13. Januar 2024"
                >
                  13
                </button>
              </td>
              <td>
                <button id="btn-2024-0-14"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 14. Januar 2024"
                >
                  14
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button id="btn-2024-0-15"
                        class="_calendarTableDateButton_feosd_76  _calendarTableDateButton_today_feosd_94"
                        type="button"
                        tabindex="-1"
                        aria-label="I dag 15. Januar 2024"
                >
                  15
                </button>
              </td>
              <td>
                <button id="btn-2024-0-16"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 16. Januar 2024"
                >
                  16
                </button>
              </td>
              <td>
                <button id="btn-2024-0-17"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 17. Januar 2024"
                >
                  17
                </button>
              </td>
              <td>
                <button id="btn-2024-0-18"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 18. Januar 2024"
                >
                  18
                </button>
              </td>
              <td>
                <button id="btn-2024-0-19"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 19. Januar 2024"
                >
                  19
                </button>
              </td>
              <td>
                <button id="btn-2024-0-20"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 20. Januar 2024"
                >
                  20
                </button>
              </td>
              <td>
                <button id="btn-2024-0-21"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 21. Januar 2024"
                >
                  21
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button id="btn-2024-0-22"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 22. Januar 2024"
                >
                  22
                </button>
              </td>
              <td>
                <button id="btn-2024-0-23"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 23. Januar 2024"
                >
                  23
                </button>
              </td>
              <td>
                <button id="btn-2024-0-24"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 24. Januar 2024"
                >
                  24
                </button>
              </td>
              <td>
                <button id="btn-2024-0-25"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 25. Januar 2024"
                >
                  25
                </button>
              </td>
              <td>
                <button id="btn-2024-0-26"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 26. Januar 2024"
                >
                  26
                </button>
              </td>
              <td>
                <button id="btn-2024-0-27"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 27. Januar 2024"
                >
                  27
                </button>
              </td>
              <td>
                <button id="btn-2024-0-28"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 28. Januar 2024"
                >
                  28
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button id="btn-2024-0-29"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 29. Januar 2024"
                >
                  29
                </button>
              </td>
              <td>
                <button id="btn-2024-0-30"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="-1"
                        aria-label=" 30. Januar 2024"
                >
                  30
                </button>
              </td>
              <td>
                <button id="btn-2024-0-31"
                        class="_calendarTableDateButton_feosd_76"
                        type="button"
                        tabindex="0"
                        aria-current="true"
                        aria-label=" 31. Januar 2024"
                >
                  31
                </button>
              </td>
              <td>
                <button id="btn-2024-1-1"
                        class="_calendarTableDateButton_feosd_76 _calendarTableDateButton_adjacentMonth_feosd_87"
                        type="button"
                        tabindex="-1"
                        aria-label=" 1. Februar 2024"
                >
                  1
                </button>
              </td>
              <td>
                <button id="btn-2024-1-2"
                        class="_calendarTableDateButton_feosd_76 _calendarTableDateButton_adjacentMonth_feosd_87"
                        type="button"
                        tabindex="-1"
                        aria-label=" 2. Februar 2024"
                >
                  2
                </button>
              </td>
              <td>
                <button id="btn-2024-1-3"
                        class="_calendarTableDateButton_feosd_76 _calendarTableDateButton_adjacentMonth_feosd_87"
                        type="button"
                        tabindex="-1"
                        aria-label=" 3. Februar 2024"
                >
                  3
                </button>
              </td>
              <td>
                <button id="btn-2024-1-4"
                        class="_calendarTableDateButton_feosd_76 _calendarTableDateButton_adjacentMonth_feosd_87"
                        type="button"
                        tabindex="-1"
                        aria-label=" 4. Februar 2024"
                >
                  4
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithPlaceholderEmpty play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r22:"
           class="_label_348na_5"
           for="datepickerInputId-:r21:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r21:"
             class="_input_1g8wy_11"
             autocomplete="off"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r23:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r23:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r20:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r26:"
           class="_label_348na_5"
           for="datepickerInputId-:r25:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r25:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             readonly
             value="01.02.2024"
      >
    </div>
    <div id="datepickerErrorId-:r24:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2:"
           class="_label_348na_5"
           for="datepickerInputId-:r1:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r1:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value
             name="dummyNameForwardedFromRef"
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rv:"
           class="_label_348na_5"
           for="datepickerInputId-:ru:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:ru:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             required
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r10:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r10:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r13:"
           class="_label_348na_5 _label_required_348na_12"
           for="datepickerInputId-:r12:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:r12:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             required
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r14:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r14:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r11:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rr:"
           class="_label_348na_5"
           for="datepickerInputId-:rq:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:rq:"
             class="_input_1g8wy_11"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value="01.02.2024"
      >
      <button type="button"
              class="_calendarButton_1g8wy_15"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rs:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rs:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rp:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker/DatePicker WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rj:"
           class="_label_348na_5"
           for="datepickerInputId-:ri:"
    >
      Fødselsdato
    </label>
    <div class="_dateContainer_1g8wy_1 _dateContainerMarginTop_1g8wy_7">
      <input id="datepickerInputId-:ri:"
             class="_input_1g8wy_11 _input_large_1g8wy_38"
             autocomplete="off"
             placeholder="Skriv eller velg"
             value
      >
      <button type="button"
              class="_calendarButton_1g8wy_15 _calendarButton_large_1g8wy_93"
              aria-expanded="false"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_large_o38m2_15 _icon_1g8wy_90"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rk:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rk:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
